package BusinessLogic;

public interface UnicoNombreValidable {

    boolean esNombreUnico(String nombre);

}
