package DataAccessComponent.DAO.CatalogoArtistas;
import java.sql.*;
import java.util.ArrayList;
import java.util.List;

import DataAccessComponent.DTO.CatalogoArtistas.Artista;
import DataAccessComponent.DTO.CatalogoArtistas.ServicioValidacion;
import DataAccessComponent.DTO.CatalogoCanciones.Genero;

public class ArtistaDAO {

    protected Artista artista;
    private ArrayList<Artista> artistas;

    private ServicioValidacion servicioValidacion;

    public ArtistaDAO (Artista artista){
        this.artista = artista;
        this.artistas = new ArrayList<>();
        this.servicioValidacion = new ServicioValidacion();
    }

    public void registrarArtista(String nombre, List<Genero> generos, String biografia, byte[] imagen) {
        try (Connection conexion = ConexionBD.getConexion()) {
            // 1. Insertar en la tabla Artista
            String sql = "INSERT INTO Artista(nombre, biografia, imagen) VALUES (?, ?, ?)";
            PreparedStatement ps = conexion.prepareStatement(sql, Statement.RETURN_GENERATED_KEYS);
            ps.setString(1, nombre);
            ps.setString(2, biografia);
            ps.setBytes(3, imagen);
            ps.executeUpdate();

            // 2. Obtener el ID generado automáticamente
            ResultSet rs = ps.getGeneratedKeys();
            int idArtista = -1;
            if (rs.next()) {
                idArtista = rs.getInt(1);
            }

            // 3. Insertar en tabla puente Artista_Genero
            sql = "INSERT INTO Artista_Genero(id_artista, id_genero) VALUES (?, ?)";
            ps = conexion.prepareStatement(sql);
            for (Genero genero : generos) {
                ps.setInt(1, idArtista);
                ps.setInt(2, genero.getId()); // ← asegúrate de que Genero tiene el método getId()
                ps.addBatch();
            }
            ps.executeBatch();

            System.out.println("Artista registrado con éxito.");
        } catch (SQLException e) {
            System.err.println("Error al registrar artista: " + e.getMessage());
        }
    }

    public void actualizarArtista (Artista artistaAActualizar){
        for(int i = 0; i < artistas.size(); i++){
            Artista artistaActual = artistas.get(i);
            if(artistaActual.getId() == artistaAActualizar.getId()){
                artistaActual.setNombre(artistaAActualizar.getNombre());
                artistaActual.setGeneros(artistaAActualizar.getGenero());
                artistaActual.setBiografia(artistaAActualizar.getBiografia());
                artistaActual.setImagen(artistaAActualizar.getImagen());

            }
        }
    }
    public void eliminarArtista (Artista artista){
        /*
        if (servicioValidacion.tieneElementosAsociados(artista)) {
            System.out.println(" No se puede eliminar: tiene elementos asociados.");
        } else {
            artistas.remove(artista);
            System.out.println("Artista eliminado con éxito.");
        }*/


        //implementar el metodo de tieneElementosAsociados
        artistas.remove(artista);

    }

    public ArrayList<Artista> buscarArtistas() {
        return artistas;
    }

    public Artista buscarArtistaID(Artista artista) {
        return artista;

    }
}
