package BusinessLogic.CatalogoArtistas;

public interface AsociacionValidable {

    boolean tieneElementosAsociados(Artista artista);

}
